# tee-ware

./: Cargo.toml  README.md
crates/dcap/: Cargo.toml
crates/dcap/src/primitives/: identity.rs  mod.rs  tcb_info.rs
crates/dcap/src/primitives/data/: enclave_identity_v2.json  tcb_info_v2.json  tcb_info_v3.json
crates/tss-client/: Cargo.toml
crates/tss-client/src/: client.rs  lib.rs  primitives.rs  tcp_transport.rs
crates/tss-serde/: Cargo.toml
crates/tss-serde-derive/: Cargo.toml
crates/tss-serde-derive/src/: lib.rs
crates/tss-serde/src/: lib.rs
crates/tss-serde/tests/: integration_tests.rs
